# EasyPaste

./: .eslintrc-auto-import.json  .gitignore  .prettierignore  README.md  index.html  latest.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
FAQ/replace_global_hotkey_theory/: replace_global_hotkey_theory.md
FAQ/rights_of_administrators/: rights_of_administrators.md
src/: App.vue  main.ts
src-tauri/: Cargo.lock.back  Cargo.toml  tauri.conf.json  tauri.mac.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/configs/nsis/: hook.nsh
src-tauri/icons/: icon.icns
src-tauri/resources/locales/: en.json  enUS.json  zh.json  zhCN.json
src-tauri/src/: clipboard_monitor.rs  file.rs  i18n.rs  lib.rs  listener.rs  log.rs  main.rs  permission.rs  plugins.rs  regedit.rs  tray.rs  window.rs  windows.rs
src-tauri/src/commands/: dev.rs  file.rs  mod.rs  regedit.rs  system.rs  web.rs
src-tauri/src/i18n/: commands.rs  loader.rs  loader_custom.rs  loader_default.rs  loader_plugins.rs  mod.rs  models.rs  state.rs
src-tauri/src/listener/: clipboard_ops.rs  handler.rs  image_utils.rs  mod.rs  state.rs
src-tauri/src/log/: config.rs  formatter.rs  mod.rs
src-tauri/src/models/: file_model.rs  mod.rs
src-tauri/src/tray/: commands.rs  event_handler.rs  menu_builder.rs  mod.rs  state.rs
src-tauri/src/utils/: compress_utils.rs  mod.rs
src-tauri/src/windows/: builder.rs  commands.rs  mod.rs  plugin_runner.rs
src/components/: ButtonGroup.vue  FilePreview.vue  ImageDataCache.ts  NavBar.vue  TitleBar.vue
src/configs/: FileConfig.ts  LanguageConfig.ts  ThemeConfig.ts
src/constants/: CopyStateConstant.ts  FileTypeConstatnts.ts  KeysConstants.ts  PublicConstants.ts  StoreKeyConstants.ts  UserSettingsConstant.ts
src/data/: SystemParams.ts
src/pages/: About.vue  Settings.vue  TagsManager.vue
src/routers/: index.ts
src/services/: ClipboardDBService.ts  ClipboardService.ts  DataClearService.ts  FileService.ts  LanguageService.ts  PluginService.ts  ThemeService.ts  UpdaterService.ts  WindowService.ts  clipboardService.ts
src/store/: CopyStatus.ts  CustomThemeConfig.ts  FirstRun.ts  Fixed.ts  Settings.ts  ShortcutKeyAvailableStatus.ts  ShortcutKeys.ts  copyStatus.ts  devtools.ts  fixed.ts
src/types/: ButtonGroup.ts  ClipboardItem.d.ts  ClipboardItem.ts  Color.d.ts  Configs.d.ts  Configs.ts  ContextMenu.d.ts  CopyState.ts  Language.d.ts  NavBarItem.d.ts  PackageInfo.d.ts  PackageTreeOption.d.ts  Plugin.d.ts  SearchFilters.d.ts  Themes.d.ts  Themes.ts  UpdaterInfo.d.ts  UpdaterInfo.ts  Window.d.ts  Window.ts  auto-imports.d.ts  components.d.ts  language.ts
src/utils/: AudioUtil.ts  CodeUtil.ts  ColorUtil.ts  DateUtil.ts  DomUtil.ts  FileTypeUtil.ts  FileUtil.ts  ImageUtil.ts  LanguageUtil.ts  LinkUtil.ts  MarkdownUtil.ts  OfficeUtil.ts  PackageUtil.ts  PluginUtil.ts  ProgramUtil.ts  ShortcutKeys.ts  ShortcutKeysUtil.ts  TextTypeUtil.ts  TextUtil.ts  TreeUtil.ts  VideoUtil.ts  (+7 more)
(+208 files in other folders)
