[package]
name = "EasyPaste"
version = "0.0.1"
description = "简易的剪贴板管理工具"
authors = ["linweijia"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "easypaste_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "unstable"] } # 启用托盘和PNG支持
tauri-plugin-opener = "2"
# JSON 处理
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
base64 = "0.13.0"
# 日志相关配置
log = "0.4"
tauri-plugin-log = "2"
# 日期
chrono = { version = "0.4.19", features = ["serde"] }
# uuid
uuid = { version = "1.3.0", features = ["v4"] }
# 图像处理依赖
image = "0.24.6"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
# 文件操作
dirs = "4.0.0"
tauri-plugin-shell = "2"

[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2.0.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

