[package]
name = "EasyPaste"
version = "0.0.5"
description = "简易的剪贴板管理工具"
authors = ["linweijia"]
edition = "2021"
license = "Apache License 2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "easypaste_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "unstable"] } # 启用托盘和PNG支持
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
# JSON 处理
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 日志相关配置
log = "0.4"
# 日期
chrono = { version = "0.4.19", features = ["serde"] }
# 文件操作
dirs = "6.0.0"
# 剪贴板操作
clipboard-rs = "0.3.0"
lazy_static = "1.5.0"

# 数据库支持
[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2.0.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
